# jarvis

./: .gitignore  README.md  build.sh  run.sh
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: build.yml
orchestrator/: .env.example  cabal.project  orchestrator.cabal
orchestrator/app/: Main.hs
orchestrator/prompts/: custom_post.txt  discover_content.txt  generate_draft.txt  revise_draft.txt
orchestrator/sql/: add_interest_score_check.sql  create_content_status.sql  create_draft_status.sql  create_status_indexes.sql  create_updated_at_trigger.sql
orchestrator/sql/indexes/: ai_analysis.sql  post_draft.sql  post_draft_source.sql  post_draft_subject.sql  raw_content.sql  raw_content_subject.sql  review_comment.sql  subject.sql
orchestrator/sql/seeds/: subjects.sql
orchestrator/sql/triggers/: ai_analysis.sql  post_draft.sql  raw_content.sql  review_comment.sql  subject.sql
orchestrator/sql/types/: comment_author.sql  content_status.sql  draft_status.sql
orchestrator/src/Orchestrator/: Error.hs  IOUtils.hs  Pipeline.hs  TextUtils.hs
orchestrator/src/Orchestrator/AI/: Client.hs
orchestrator/src/Orchestrator/AI/Client/: Internal.hs
orchestrator/src/Orchestrator/Database/: Connection.hs  Entities.hs  Migrations.hs  Models.hs  TH.hs
orchestrator/src/Orchestrator/Discord/: Bot.hs
orchestrator/src/Orchestrator/GitHub/: Client.hs
orchestrator/src/Orchestrator/Posts/: Generator.hs
orchestrator/src/Orchestrator/Topics/: Selector.hs
orchestrator/test/: Main.hs  TestHelpers.hs
orchestrator/test/Orchestrator/: PipelineSpec.hs  TextUtilsSpec.hs
orchestrator/test/Orchestrator/AI/: ClientSpec.hs
orchestrator/test/Orchestrator/Database/: MigrationSpec.hs  ModelsSpec.hs
orchestrator/test/Orchestrator/Discord/: BotSpec.hs
orchestrator/test/Orchestrator/GitHub/: ClientSpec.hs
orchestrator/test/Orchestrator/Posts/: GeneratorSpec.hs
orchestrator/test/Orchestrator/Topics/: SelectorSpec.hs
website/: hugo.toml
