cabal-version: 3.0
name: orchestrator
version: 0.1.0.0
synopsis: Orchestration engine for the Daily Haskell In Real Life blog
description:
  Manages the full lifecycle of the Daily Haskell In Real Life blog:
  topic selection via AI (GPT), draft creation, Discord-based human review,
  and GitOps deployment to a Hugo-based GitHub Pages site.

license: Apache-2.0
license-file: ../LICENSE
author: Jarvis
maintainer: you@example.com
category: Application
build-type: Simple
extra-doc-files: ../CHANGELOG.md
extra-source-files:
  sql/add_interest_score_check.sql
  sql/create_comment_author.sql
  sql/create_content_status.sql
  sql/create_draft_status.sql
  sql/create_status_indexes.sql
  sql/create_updated_at_trigger.sql

common common-deps
  build-depends:
    aeson >=2.1,
    base ^>=4.17 || ^>=4.18 || ^>=4.19 || ^>=4.20,
    bytestring >=0.11,
    mtl >=2.3,
    text >=2.0,
    time >=1.12,
    transformers >=0.6,

  default-language: Haskell2010
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    TupleSections

library
  import: common-deps
  hs-source-dirs: src
  exposed-modules:
    Orchestrator.AI.Client
    Orchestrator.Database.Connection
    Orchestrator.Database.Entities
    Orchestrator.Database.Migrations
    Orchestrator.Database.Models
    Orchestrator.Discord.Bot
    Orchestrator.GitHub.Client
    Orchestrator.Posts.Generator
    Orchestrator.Topics.Selector

  build-depends:
    -- Database
    -- HTTP / AI
    -- Discord
    -- Logging
    -- Utilities
    discord-haskell >=1.16,
    envy >=2.1,
    esqueleto >=3.5,
    file-embed >=0.0.15,
    http-client >=0.7,
    http-client-tls >=0.3,
    http-conduit >=2.3,
    monad-logger >=0.3,
    persistent >=2.14,
    persistent-postgresql >=2.13,
    persistent-template >=2.12,
    resource-pool >=0.4,
    stm >=2.5,
    uuid >=1.3,

executable orchestrator
  import: common-deps
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    orchestrator

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

test-suite orchestrator-test
  import: common-deps
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:
    Orchestrator.Database.MigrationSpec
    Orchestrator.Database.ModelsSpec
    Orchestrator.Posts.GeneratorSpec
    TestHelpers

  build-depends:
    QuickCheck >=2.14,
    hspec >=2.10,
    hspec-discover >=2.10,
    monad-logger >=0.3,
    orchestrator,
    persistent >=2.14,
    persistent-postgresql >=2.13,

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
